# ClickMate

./: .cursorrules  .gitignore  BUILD_GUIDE.md  CHANGELOG.md  README.md  START.bat  build.ps1  build_installer.bat  build_native.bat  build_native_msvc.bat  build_portable.bat  build_release.bat  build_single_exe.bat  compile.bat  compile_dll.ps1  diagnose.bat  direct_compile.ps1  pubspec.yaml  quick_build.bat  run_app.bat  run_as_admin.bat  run_debug.bat  setup_and_run.bat  test_hotkey.bat  如何启动.txt  快捷键问题解决方案.md  打包发布指南.md  新功能说明.txt
docs/: BUILD_GUIDE.md  MULTILINGUAL_GUIDE.md  macOS_INSTALL_GUIDE.md  打包发布指南.md  日志系统说明.md
lib/: click_config.dart  config_management_dialog.dart  language_preference.dart  logger_service.dart  main.dart  mouse_controller_bindings.dart  mouse_controller_service.dart  upgrade_service.dart  version.dart
macos/: Podfile  copy_dylib.sh
native/: CMakeLists.txt
native/src/: libmouse_controller.dylib  mouse_controller.cpp  mouse_controller.h  mouse_controller_macos.mm  temp_build.bat
scripts/: START.bat  build_dmg.sh  build_release.bat  create_helper_files.bat  create_selfsign_cert.ps1  diagnose.bat  generate_icons.py  quick_start.bat  run_as_admin.bat  run_debug.bat  sign_release.bat  test_hotkey.bat
test/: click_config_test.dart  config_management_dialog_test.dart  hotkey_settings_dialog_test.dart  language_preference_test.dart  logger_service_test.dart  main_menu_test.dart  mouse_controller_service_test.dart  path_provider_test_helper.dart  upgrade_service_test.dart  widget_test.dart
windows/: CMakeLists.txt
(+11 files in other folders)
